Ticket #2871 - Fix disk usage bar alignment

--- a/media/css/base.css
+++ b/media/css/base.css
@@ -142,6 +142,8 @@ li {
     text-align: center;
     vertical-align:top;
 }
+#content td.ram, td.disk {text-align:left !important;}
+
 #content td.status, td.actions { padding:5px 0 0 0;}
 #content td a {border:0;}
 
